assert fails in L1RGenerator::increment_event_counter_impl

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b52
    • x86_64
    • generic

        ----------messages:(3/195)----------
        command: main -XX:CompileThresholdScaling=0.14 GetDoubleVMOption
        reason: User specified action: run main/othervm -XX:CompileThresholdScaling=0.14 GetDoubleVMOption
        elapsed time (seconds): 6.673
        ----------System.out:(23/1507)----------
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/c1_LIRGenerator.cpp:3406
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/010217.amurillo/s/hotspot/src/share/vm/c1/c1_LIRGenerator.cpp:3406), pid=20598, tid=140596483155712
        # assert(frequency == 0 || is_power_of_2(frequency + 1)) failed: Frequency must be x^2 - 1 or 0
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150131010217.amurillo.jdk9-hs-2015-01--b00)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150131010217.amurillo.jdk9-hs-2015-01--b00 compiled mode linux-amd64 compressed oops)
        # Core dump written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /scratch/local/aurora/sandbox/results/workDir/com/sun/management/HotSpotDiagnosticMXBean/GetDoubleVMOption/core.20598)
        #
        # An error report file with more information is saved as:
        # /scratch/local/aurora/sandbox/results/workDir/com/sun/management/HotSpotDiagnosticMXBean/GetDoubleVMOption/hs_err_pid20598.log
        #
        # Compiler replay data is saved as:
        # /scratch/local/aurora/sandbox/results/workDir/com/sun/management/HotSpotDiagnosticMXBean/GetDoubleVMOption/replay_pid20598.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 140596483155712
        Dumping core ...
        ----------System.err:(0/0)----------
        ----------rerun:(19/1521)*----------
        JTREG_COF=false \\
        JTREG_HOME=/export/local/aurora/CommonData/jtreg_dir \\
        LANG=C \\
        PATH=/bin:/usr/bin \\
        CLASSPATH=/scratch/local/aurora/CommonData/jtreg_dir/lib/javatest.jar:/scratch/local/aurora/CommonData/jtreg_dir/lib/jtreg.jar:/scratch/local/aurora/sandbox/results/workDir/classes/com/sun/management/HotSpotDiagnosticMXBean:/scratch/local/aurora/CommonData/j2se_jdk/jdk/test/com/sun/management/HotSpotDiagnosticMXBean \\
            /export/local/aurora/CommonData/jdk/bin/java \\
                -Dtest.vm.opts=-d64 \\
                -Dcompile.jdk=/export/local/aurora/CommonData/jdk \\
                -Dtest.src.path=/scratch/local/aurora/CommonData/j2se_jdk/jdk/test/com/sun/management/HotSpotDiagnosticMXBean \\
                -Dtest.src=/scratch/local/aurora/CommonData/j2se_jdk/jdk/test/com/sun/management/HotSpotDiagnosticMXBean \\
                -Dtest.tool.vm.opts=-J-d64 \\
                -Dtest.class.path=/scratch/local/aurora/sandbox/results/workDir/classes/com/sun/management/HotSpotDiagnosticMXBean \\
                -Dtest.timeout.factor=3.0 \\
                -Dtest.classes=/scratch/local/aurora/sandbox/results/workDir/classes/com/sun/management/HotSpotDiagnosticMXBean \\
                -Dtest.jdk=/export/local/aurora/CommonData/jdk \\
                -Dtest.java.opts='-Xcomp -d64 -server -Xcomp' \\
                -Dtest.compiler.opts= \\
                -d64 -Xcomp -d64 -server -Xcomp -XX:CompileThresholdScaling=0.14 \\
                com.sun.javatest.regtest.MainWrapper /scratch/local/aurora/sandbox/results/workDir/classes/com/sun/management/HotSpotDiagnosticMXBean/GetDoubleVMOption.jta
        result: Failed. Unexpected exit from test [exit code: 134]


        test result: Failed. Unexpected exit from test [exit code: 134]

              Assignee:
              Zoltan Majo (Inactive)
              Reporter:
              Yekaterina Kantserova (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: