8072398: assert fails in L1RGenerator::increment_event_counter_impl

Change scaling code to allow scaling with 0.0; change set_tiered_flags() to treat CompileThresholdScaling==0.0 in a special way.

Reviewed-by: kvn, iveresov